[gd_scene load_steps=4 format=3 uid="uid://ceg75muk24w6s"]

[ext_resource type="Script" uid="uid://dsukd1i0d4w4w" path="res://addons/ExtraUIControls/group_picker.gd" id="1_cbrem"]
[ext_resource type="PackedScene" uid="uid://dl27xojitjda0" path="res://addons/ExtraUIControls/search_component.tscn" id="2_eiobf"]
[ext_resource type="PackedScene" uid="uid://cd3avhvtg0qj8" path="res://addons/ExtraUIControls/tag_picker.tscn" id="3_tgksf"]

[node name="Groups" type="PanelContainer"]
offset_right = 604.0
offset_bottom = 600.0
script = ExtResource("1_cbrem")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 600)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="groups_search" parent="HBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_eiobf")]
unique_name_in_owner = true
layout_mode = 2

[node name="groups_tree" type="Tree" parent="HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
select_mode = 2

[node name="add_group_button" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Group"

[node name="tag_picker" parent="HBoxContainer" instance=ExtResource("3_tgksf")]
unique_name_in_owner = true
layout_mode = 2
show_filter_buttons = false
toggle_mode_only = true
